--- a/app/src/main/res/layout/activity_rates.xml
+++ b/app/src/main/res/layout/activity_rates.xml
@@ -5,14 +5,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="Hello Revolut"
-            android:textColor="@android:color/holo_blue_light"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/currenciesRV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
