UI v1 commited (need pixel perfect) Value Transformation logic added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="revolutBlack">#191C1F</color>
+    <color name="revolutGrey">#8B959E</color>
+
 </resources>
