--- a/app/src/main/res/layout/item_currency_exchanger.xml
+++ b/app/src/main/res/layout/item_currency_exchanger.xml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:padding="@dimen/_10sdp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_10sdp">
 
-    <TextView
-            android:id="@+id/currencyValue"
+
+    <ImageView
+            android:id="@+id/currencyFlag"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <fc.home_work.revolut.base.ui.RevolutTextView
+            android:id="@+id/currencyCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/holo_blue_light"/>
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:textColor="@color/revolutBlack"
+            android:textSize="@dimen/_14sdp"
+            app:layout_constraintStart_toEndOf="@+id/currencyFlag"
+            app:layout_constraintTop_toTopOf="@+id/currencyFlag" />
 
-</LinearLayout>
+
+    <fc.home_work.revolut.base.ui.RevolutTextView
+            android:id="@+id/currencyDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/revolutGrey"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/currencyFlag"
+            app:layout_constraintStart_toStartOf="@+id/currencyCode" />
+
+    <EditText
+            android:id="@+id/currencyExchangeValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:hint="0.0"
+            android:inputType="numberDecimal"
+            android:textColor="@color/revolutBlack"
+            android:textColorHint="@color/revolutGrey"
+            android:textSize="@dimen/_14sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/currencyFlag"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/currencyFlag" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
