--- a/app/src/main/res/layout/activity_rates.xml
+++ b/app/src/main/res/layout/activity_rates.xml
@@ -5,10 +5,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <fc.home_work.revolut.base.ui.RevolutTextViewBold
+            android:id="@+id/rootPageTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rates_label"
+            android:textSize="@dimen/_16sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:textStyle="bold"
+            android:textColor="@color/revolutBlack" />
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/currenciesRV"
+            android:layout_marginTop="@dimen/_15sdp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            app:layout_constraintTop_toBottomOf="@+id/rootPageTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
