--- a/app/src/main/res/layout/item_currency_exchanger.xml
+++ b/app/src/main/res/layout/item_currency_exchanger.xml
@@ -21,6 +21,7 @@
             android:layout_marginLeft="@dimen/_10sdp"
             android:textColor="@color/revolutBlack"
             android:textSize="@dimen/_13sdp"
+            android:paddingRight="@dimen/_20sdp"
             app:layout_constraintStart_toEndOf="@+id/currencyFlag"
             app:layout_constraintTop_toTopOf="@+id/currencyFlag" />
 
@@ -36,7 +37,7 @@
 
     <EditText
             android:id="@+id/currencyExchangeValue"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/_10sdp"
             android:hint="0.0"
@@ -44,8 +45,11 @@
             android:textColor="@color/revolutBlack"
             android:textColorHint="@color/revolutGrey"
             android:textSize="@dimen/_14sdp"
+            app:layout_constraintWidth_default="wrap"
+            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintBottom_toBottomOf="@+id/currencyFlag"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currencyCode"
             app:layout_constraintTop_toTopOf="@+id/currencyFlag" />
 
 
