--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
 
     <color name="revolutBlack">#191C1F</color>
     <color name="revolutGrey">#8B959E</color>
+    <color name="revolutWhite">#ffffff</color>
+
 
 </resources>
